<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宁波教育资源</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 异常 -->
    <string name="generic_server_down">server no response</string>
    <string name="need_pwd">请输入用户名</string>
    <string name="need_username">请输入密码</string>
    <string name="hellotome">Please login first</string>
    <string name="no_internet">网络不可用</string>
    <string name="generic_error">connection error</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="requestaddress_error">请求错误</string>
    <string name="login_title">用户登录</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密  码</string>
    <string name="login_remember">记住密码</string>
    <string name="login_submit">登录</string>
    <string name="usercenter">个人中心</string>
    <string name="logout">注销</string>
    <string name="tips_unlogin">您还未登录，请登录之后使用</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="downloadmanage">下载管理</string>
    <string name="complete">完成</string>
    <string name="logininfo">个人信息</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="detail">详细</string>
    <string name="hot">热点</string>
    <string name="Navigation">导航</string>
    <string name="title_tech_res">教师教育学术资源</string>
    <string name="title_navi">教育信息导航 </string>
    <string name="title_vedio">中小幼师名家视频 </string>
    <string name="title_primary">中小幼学科教学资料</string>
    <string name="title_continue">教师继续教育项目</string>
    <string name="title_school">中小幼学校名录</string>
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    <string name="search_result">"搜索到与 &lt;font face=\"arial\" color=\"red\">&#160;\"%1$s\"&#160;&lt;/font>相关的资源&lt;font face=\"arial\" color=\"red\">&#160;%2$d&#160;&lt;/font>个"</string>

</resources>